k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forfarm-ingress
  namespace: forfarm
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: "forfarm-certificate"
spec:
  rules:
    - host: sirin.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
    - host: api.sirin.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8000
